--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
   <div class="php-email-form" style="padding: 30px; border-radius: 8px; background-color: #f8f9fa; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-align: center;">
     <h3 style="margin-bottom: 20px;">Schedule Your Free 20-Minute English Session</h3>
     <p style="margin-bottom: 25px;">Book your session instantly. Experience a fun, personalized class with Tutor Dan!</p>
-    <a href="https://tutordanacademy.com/freeclass" 
+    <a href="/freeclass" 
        style="display:inline-block; padding:12px 28px; font-size:16px; background-color:#007bff; color:white; border:none; border-radius:6px; text-decoration:none; cursor:pointer;">
       Book Your Free Class Now
     </a>
