added group classes

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -198,6 +198,69 @@ src="https://www.facebook.com/tr?id=883743971211813&ev=PageView&noscript=1"
       </div>
     </div>
 <br>
+
+
+<section id="group-classes" class="pricing section-bg dark-background">
+  <div class="container">
+
+    <!-- SECTION TITLE -->
+    <div class="section-title text-center">
+      <h2>Group Video Classes</h2>
+      <p>Live small-group classes focused on real English speaking</p>
+    </div>
+
+    <!-- PRICING ROW -->
+    <div class="row justify-content-center">
+
+      <!-- LEFT: TUE / THU -->
+      <div class="col-lg-5 col-md-6 pricing-item">
+        <h3>Tuesday / Thursday</h3>
+
+        <h4>
+          <sup>$</sup>100<span> / month</span>
+        </h4>
+
+        <ul>
+          <li>2 video classes per week</li>
+           <li>20 minutes each</li>
+          <li>Small group format</li>
+          <li>Live speaking practice</li>
+          <li>Direct feedback</li>
+           <li>Class time 21:00 KST</li>
+        </ul>
+
+        <div class="text-center">
+          <a href="https://buy.stripe.com/5kQ6oG7da4zldfRdWI08g0B" class="buy-btn">Buy Now</a>
+        </div>
+      </div>
+
+      <!-- RIGHT: MON / WED / FRI -->
+      <div class="col-lg-5 col-md-6 pricing-item featured">
+        <h3>Monday / Wednesday / Friday</h3>
+
+        <h4>
+          <sup>$</sup>140<span> / month</span>
+        </h4>
+
+        <ul>
+          <li>3 video classes per week</li>
+            <li>20 minutes each</li>
+          <li>Small group format</li>
+          <li>Live speaking practice</li>
+          <li>Direct feedback</li>
+          <li>Class time 21:00 KST</li>
+        </ul>
+
+        <div class="text-center">
+          <a href="https://buy.stripe.com/9B6fZgcxu5Dp2Bd5qc08g0C" class="buy-btn">Buy Now</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
    <!-- PEAK PLAN – VIP PREMIUM VERSION -->
 <div class="pricing-item featured peak-vip-card" data-aos="fade-up">
 
