added buton on welcecome page

--- a/welcome/index.html
+++ b/welcome/index.html
@@ -93,7 +93,22 @@ src="https://www.facebook.com/tr?id=883743971211813&ev=PageView&noscript=1"
   <div class="container section-title" data-aos="fade-up">
     <h2>Here’s what you’ll experience — just press play 👇</h2>
     <p>Discover how our fun, personalized sessions make speaking English simple<br>당신의 목표에 맞는 플랜을 선택하세요</p>
-
+<div style="text-align: center; margin-top: 20px;">
+  <a href="https://tutordanacademy.com/freeclass" 
+     style="background-color: #FF0000; 
+            color: #FFFFFF; 
+            padding: 15px 30px; 
+            text-decoration: none; 
+            font-size: 18px; 
+            font-weight: bold; 
+            border-radius: 5px; 
+            display: inline-block;">
+    Schedule Your Free 20-Minute Session
+  </a>
+  <p style="font-size: 14px; color: #555555; margin-top: 8px;">
+    No payment, no commitment — just a free session to get started.
+  </p>
+</div>
 
     <!-- Video Section -->
 <div class="video-container">
