added proper url to free class

--- a/welcome/index.html
+++ b/welcome/index.html
@@ -103,7 +103,7 @@ src="https://www.facebook.com/tr?id=883743971211813&ev=PageView&noscript=1"
 </div>
 
 <div style="text-align: center; margin-top: 20px;">
-  <a href="https://tutordanacademy.com/freeclass" 
+  <a href="/freeclass" 
      style="background-color: #FF0000; 
             color: #FFFFFF; 
             padding: 15px 30px; 
