testiomonials to free pae

--- a/welcome/index.html
+++ b/welcome/index.html
@@ -112,7 +112,7 @@ src="https://www.facebook.com/tr?id=883743971211813&ev=PageView&noscript=1"
             font-weight: bold; 
             border-radius: 5px; 
             display: inline-block;">
-    Schedule Your Free 20-Minute Session
+    Book Your Free 20-Minute Session
   </a>
   <p style="font-size: 14px; color: #555555; margin-top: 8px;">
     No payment, no commitment — just a free session to get started.
